# DeepSeek-TUI-fork

./: .gitignore  Cargo.toml  README.md  RELEASE_NOTES.md  deepseek.service
.deepseek/: context.db  context.db-shm  context.db-wal  events.jsonl
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
android/: .gitignore  deepseek-release.keystore  settings.gradle.kts
android/.planning/: PROJECT.md  ROADMAP.md
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/deepseek/tui/: DeepSeekApp.kt  MainActivity.kt
android/app/src/main/java/com/deepseek/tui/connection/: ApiClient.kt  KeyStoreManager.kt  SshTunnelManager.kt  SshTunnelService.kt
android/app/src/main/java/com/deepseek/tui/data/db/: AgentDao.kt  AgentEntity.kt  AppDatabase.kt  MessageDao.kt  MessageEntity.kt
android/app/src/main/java/com/deepseek/tui/data/prefs/: ConfigRepository.kt  ConnectionConfig.kt
android/app/src/main/java/com/deepseek/tui/data/repository/: MessageRepository.kt
android/app/src/main/java/com/deepseek/tui/ui/: DeepSeekRoot.kt
android/app/src/main/java/com/deepseek/tui/ui/chat/: ChatInputBar.kt  ChatScreen.kt  MarkdownText.kt  MessageBubble.kt  MessageList.kt
android/app/src/main/java/com/deepseek/tui/ui/components/: SwipeableCard.kt
android/app/src/main/java/com/deepseek/tui/ui/dashboard/: AgentChips.kt  ConnectionBar.kt  DashboardScreen.kt  ProgressLog.kt  StatsRow.kt
android/app/src/main/java/com/deepseek/tui/ui/hive/: HiveScreen.kt
android/app/src/main/java/com/deepseek/tui/ui/navigation/: NavigationDrawer.kt
android/app/src/main/java/com/deepseek/tui/ui/sessions/: SessionsScreen.kt
android/app/src/main/java/com/deepseek/tui/ui/settings/: SettingsScreen.kt
android/app/src/main/java/com/deepseek/tui/ui/swarm/: SwarmScreen.kt
android/app/src/main/java/com/deepseek/tui/ui/theme/: Color.kt  Theme.kt  Type.kt
android/app/src/main/java/com/deepseek/tui/viewmodel/: ChatViewModel.kt  ConnectionViewModel.kt  DashboardViewModel.kt  HiveViewModel.kt  SessionsViewModel.kt  SwarmViewModel.kt
android/app/src/main/res/drawable/: ic_launcher_foreground.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/xml/: network_security_config.xml
crates/agent/: Cargo.toml
crates/agent/src/: lib.rs
crates/app-server/: Cargo.toml
crates/app-server/src/: lib.rs  main.rs  supervisor.rs  terminal.rs
crates/app-server/src/tui/: app.rs  mod.rs
crates/app-server/src/tui/widgets/: agents.rs  chat.rs  diff.rs  mod.rs  pane_bar.rs  status.rs  tasks.rs
crates/context/: Cargo.toml
crates/context/src/: lib.rs
crates/deepseek/: Cargo.toml
crates/deepseek/src/: main.rs
crates/planning/: Cargo.toml
crates/planning/src/: lib.rs
crates/plugins/: Cargo.toml
crates/plugins/src/: lib.rs
crates/session/: Cargo.toml
crates/session/src/: lib.rs
crates/swarm/: Cargo.toml
crates/swarm/src/: lib.rs
crates/tools/src/: lib.rs
crates/tools/tests/: parity_tools.rs
crates/tui-core/: Cargo.toml
crates/tui-core/src/: lib.rs
crates/tui-core/tests/: snapshot.rs
web/: next.config.ts  package.json  tailwind.config.ts
web/.deepseek/: CHUNKING-STRATEGY.md  INTEGRATION-RUNBOOK.md  context.db-shm  context.db-wal  instructions.md
web/.deepseek/state/: AGENT-STATE.json  HIVE-MIND-PROMPT.md  HIVE-MIND.md  SECURITY-AUDIT-T10.md  SPRINT-1-RETROSPECTIVE.md  SPRINT-1.md  TURN-LOG.md  subagents.v1.json
web/scripts/: build-orchestrator.sh
web/src/: middleware.ts
web/src/app/: HomePage.tsx  globals.css  layout.tsx  page.tsx
web/src/app/api/profile/: route.ts
web/src/app/api/sessions/: route.ts
web/src/app/api/sessions/[id]/messages/: route.ts
web/src/app/api/settings/: route.ts
web/src/app/chat/: ChatPageContent.tsx  page.tsx
web/src/app/login/: page.tsx
web/src/app/marketplace/: layout.tsx
web/src/app/marketplace/plugins/: detail.tsx  page.tsx  submit.tsx
web/src/app/profile/: ProfilePageContent.tsx  page.tsx
web/src/app/register/: page.tsx
web/src/app/settings/: SettingsPageContent.tsx  page.tsx
web/src/components/: AttachmentBar.tsx  ChatArea.tsx  ChatBubble.tsx  ChatSkeleton.tsx  CommandPalette.tsx  ErrorBoundary.tsx  InputBar.tsx  PermissionPrompt.tsx  ResponseRenderer.tsx  ResponseRendererImpl.tsx  Sidebar.tsx  StatusBar.tsx  StreamingText.tsx  ThemeProvider.tsx  Toast.tsx  ToolCard.tsx
web/src/components/composer/: ZoneShell.tsx
web/src/components/ui/: Toaster.tsx  badge.tsx  button.tsx  card.tsx  input.tsx  label.tsx  molecules.tsx  select.tsx  separator.tsx  textarea.tsx
web/src/lib/: api-utils.ts  commands.ts  env.ts  types.ts  useSessionPersistence.ts
web/src/lib/agency/: engine.ts  roles.ts  sprint.ts  team.ts
web/src/lib/auth/: client.ts  index.ts
web/src/server/: ws-server.ts
