[package]
name = "deepseek-app-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Codex-style app-server transport for DeepSeek workspace architecture"

[dependencies]
anyhow.workspace = true
axum = { workspace = true, features = ["ws"] }
futures-util = "0.3"
chrono.workspace = true
clap.workspace = true
deepseek-agent = { workspace = true }
deepseek-config = { workspace = true }
deepseek-context = { workspace = true }
deepseek-core = { workspace = true }
deepseek-execpolicy = { workspace = true }
deepseek-hooks = { workspace = true }
deepseek-mcp = { workspace = true }
deepseek-protocol = { workspace = true }
deepseek-session = { workspace = true }
deepseek-state = { workspace = true }
deepseek-swarm = { workspace = true }
deepseek-tools = { workspace = true }
deepseek-tui-core = { workspace = true }
libc = "0.2"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
uuid.workspace = true
tracing-subscriber.workspace = true