[package]
name = "deepseek-context"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Hybrid context persistence with SQLite-backed storage and in-memory hot cache for DeepSeek workspace architecture"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
rusqlite = { version = "0.32", features = ["bundled"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
