[package]
name = "deepseek"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "DeepSeek TUI — AI-powered terminal workspace with daemon, session resume, and swarm orchestration"

[[bin]]
name = "deepseek"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
deepseek-app-server = { workspace = true }
libc = "0.2"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde_json.workspace = true
tokio.workspace = true
