[package]
name = "deepseek-plugins"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Plugin system: skill loading, marketplace, command discovery for DeepSeek workspace architecture"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true
