[package]
name = "deepseek-session"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Persistent session storage, export/import, and cross-device resume for DeepSeek workspace architecture"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
flate2.workspace = true
serde.workspace = true
serde_json.workspace = true
tar.workspace = true
tokio.workspace = true
uuid.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true
