[package]
name = "deepseek-swarm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Hive mind shared context, swarm orchestration, and specialized agent roles for DeepSeek workspace architecture"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
deepseek-context = { workspace = true }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true